    supposed to be.
  * Introduce a new script called dpkg-buildflags: its purpose is to retrieve
    compilation flags and it should be used within debian/rules to pass
    the right compilation flags to the build process. dpkg-builpackage still
    exports them to not break packages currently relying on them but packages
    should now start using dpkg-buildflags instead. Closes: #560070

  [ Updated dpkg translations ]
  * German (Sven Joachim).

  [ Updated dselect translations ]
  * German (Sven Joachim).

  [ Updated man page translations ]
  * German (Helge Kreutzmann).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

 -- Raphaël Hertzog <hertzog@debian.org>  Sun, 28 Mar 2010 16:46:04 +0200

dpkg (1.15.6.1) experimental; urgency=low

  [ Guillem Jover ]
  * Fix two memory leaks introduced in 1.15.6.
  * Always use C99 variadic macros, as the build requires them anyway, we
    avoid exposing the configure variable HAVE_C99 on installed headers.
  * Use __attribute__ keyword depending on compiler support, we avoid
    exposing the configure variable HAVE_C_ATTRIBUTE on installed headers.
  * Do not allow a --retry schedule in start-stop-daemon where forever is
    the last item, as it needs something to repeat over. Closes: #570938
  * Show dselect dependency/conflicts resolution screen again, by switching
    the code to use STL's min() and max() instead of preprocessor macros, to
    avoid multiple evaluation of arguments. Regression introduced in 1.15.6.
    Based on a patch by Robert Luberda <robert@debian.org>. Closes: #574816
  * Defer the fsync and rename for normal files in tar extraction so that
    it's done in one pass afterwards, to avoid massive I/O degradation due to
    the serialization from each write + fsync. This restores extraction times
    to numbers closer to the ones before the fsync patch introduced in 1.15.6.

  [ Raphaël Hertzog ]
  * Accept source packages without "Format" field for compatibility with very