@@ -25,6 +25,7 @@ dpkg (1.15.6.2) UNRELEASED; urgency=low
     the right compilation flags to the build process. dpkg-builpackage still
     exports them to not break packages currently relying on them but packages
     should now start using dpkg-buildflags instead. Closes: #560070
+  * For Ubuntu set default value of LDFLAGS to -Wl,-Bsymbolic-functions.
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
